# stress-mind-ai

./: .env_example  .gitignore  Dockerfile  LICENSE  MODEL_DETAILS.md  README.md  pyproject.toml
api/: main.py
api/enums/: activity.py
api/routing/: predict.py
api/schemas/: user_data.py
api/services/: gigachat_model.py  mechanism_model.py  stress_model.py
ml/: tasks.py
ml/data/: preprocessor.py
ml/training/: train_mechanisms.py  train_stress_model.py
